--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,20 +1,24 @@
-
-
-
-<ion-content padding id="welcome">
-	<ion-grid>
-		<ion-row>
-			<ion-col offset-sm-2 col-sm-8 offset-md-4 col-md-4 align-self-center>
-				<img src="assets/imgs/bananalogo.png" class="logo"/>
-				<h1> Bienvenido JMY3.0 </h1>
-				<div>Conexión oAuth</div>
-
-				<button ion-button block class="marginTop" (click)="signup()">Registrate</button>
-				<button ion-button block color="lightprimary" (click)="login()">Entra</button>
-			</ion-col>
-		</ion-row>
-	</ion-grid>
-
-
-
+<ion-content no-bounce>
+  <ion-slides pager="true" dir="{{dir}}" (ionSlideWillChange)="onSlideChangeStart($event)">
+    <ion-slide *ngFor="let slide of slides">
+      <img [src]="slide.image" class="slide-image" />
+      <h2 class="slide-title" [innerHTML]="slide.title"></h2>
+      <p [innerHTML]="slide.description"></p>
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image" />
+      <h2 class="slide-title">Listo para empezar!</h2>
+      <button ion-button icon-end large clear (click)="login()">
+        Inicia ahora
+        <ion-icon name="arrow-forward"></ion-icon>
+      </button>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+     <ion-buttons end *ngIf="showSkip">
+      <button ion-button (click)="login()" color="lightprimary">Saltar</button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
